--- a/src/app/modal-gestionar-eventos/modal-gestionar-eventos.component.html
+++ b/src/app/modal-gestionar-eventos/modal-gestionar-eventos.component.html
@@ -3,16 +3,13 @@
 </div>
 <form class=""> 
     <div class="mb-3">
-      <label for="exampleInputEmail1" class="form-label">Nombre del Evento:</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+      <label  class="form-label">Nombre del Evento:</label>
+      <input  [(ngModel)]="evento.name"   class="form-control">
     </div>
     <div class="mb-3">
         <label for="exampleFormControlTextarea1" class="form-label">Example textarea:</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="10" cols="70"></textarea>
+        <textarea  [(ngModel)]="evento.description"  class="form-control" id="exampleFormControlTextarea1" rows="10" cols="70"></textarea>
     </div>
-    <div class="mb-3">
-        <label for="formFileSm" class="form-label">Elegir imagen:</label>
-        <input class="form-control form-control-sm" id="formFileSm" type="file">
-      </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+
+    <button type="submit" class="btn btn-primary" (click)="CrearEvento()">Submit</button>
   </form>
