--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -20,7 +20,7 @@
             <div class="Dropdown">
             <a class="dropdown-item" [routerLink]="quienesSomos">¿Quiénes Somos?</a>
             <a class="dropdown-item" [routerLink]="organizacion">Organización</a>
-            <a class="dropdown-item" href="" >Reglas y Normas</a>
+            <a class="dropdown-item" [routerLink]="reglas" >Reglamentos y Normas</a>
             </div>
           </div>
         
