--- a/src/app/modal/modal.component.scss
+++ b/src/app/modal/modal.component.scss
@@ -3,6 +3,13 @@
     background-color: blueviolet;
 
 }
+.container-img img{
+    display: flex;
+    align-content: center;
+    width: 100%;
+    height: 290px;
+    text-align: center;
+}
 .container-img:hover{
     	
     transition:all .5s ease-in-out;
@@ -14,7 +21,8 @@
 .parrafo{
     text-align: justify;
     white-space: pre-line;
-    width: 300px;
+    width: 400px;
+    padding-left: 0;
     font-family:'Times New Roman', Times, serif;
     padding-top:10px ;
 }
